--- a/src/components/ChatInterface.scss
+++ b/src/components/ChatInterface.scss
@@ -10,6 +10,7 @@
   background: linear-gradient(135deg, #022252 0%, #2f83f1 100%);
   position: relative;
   perspective: 1000px;
+  // align-items: center;
   
   &::before {
     content: '';
